--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ footer{
     /*Don't forget to vertically and horizontally alight the card*/
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
    
 }
 
@@ -165,15 +166,21 @@ header{
   background: #fff;
   border-bottom: 3px solid #50C7C7;
   /*Your  code here again.*/
+  display: space-between;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+ 
+
  
 }
 
 .nav_links{
   /*Your code here again.*/
- flex-direction: column;
- align-content:  center;
-
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+ 
 }
 
 .nav_item a{
@@ -209,12 +216,15 @@ header{
   header{
     /*Your code here again.*/
     justify-content: flex-start; 
+    display: space-between;
+    flex-direction: row;
 
   }
 
   .nav_links{
     /*Your code here again.*/ 
-    justify-content: end;
+    flex-direction: column;
+    align-items: flex-end;
   }
 
   .nav_item a{
