--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,7 @@ header{
   .gallery{
     display: none;
   }
+  
   #gallery{
     display: none;
   }
@@ -260,8 +261,8 @@ header{
 /*Add media query to handle reduced-motion*/
 @media screen and (prefers-reduced-motion: reduce){
   
-  #img{
-    animation-name:none;
+  #logo{
+    animation-name: none;
   }
 
 }
